--- a/email.html
+++ b/email.html
@@ -37,7 +37,7 @@
                         <li><a href="calender.html" class=" sidebar-link"><i class="fa-regular fa-calendar-days"></i><p>Calendar</p></a></li>
                         <li><a href="#" class="sidebar-link submenu-parent active"><i class="fa-solid fa-envelope"></i><p>Mailbox <i class="fa-solid fa-chevron-right right-icon"></i></p></a>
                             <ul class="sidebar-submenu open">
-                                <li><a href="email.html" class="submenu-link active"><i class="fa-solid fa-circle me-4 font-size-12"></i><p class="m-0">Eamil</p></a></li>
+                                <li><a href="email.html" class="submenu-link active"><i class="fa-solid fa-circle me-4 font-size-12"></i><p class="m-0">Email</p></a></li>
                                 <li><a href="view-email.html" class="submenu-link"><i class="fa-solid fa-circle me-4 font-size-12"></i><p class="m-0">View</p></a></li>
                             </ul>
                         </li>
